[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helm-proxy"
version = "0.1.0"
description = "Serve Helm repositories (index.yaml + .tgz) backed by git repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[project.scripts]
helm-proxy = "app.__main__:main"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
